# egui-elegance

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: README.md
dev/: adding_a_widget.md  glyph_additions_plan.md  node_editor_plan.md
docs/: adding_a_widget.md
examples/: orbit.rs  render_docs.rs  widgets.rs
mockups/accordion/: accordion.html
mockups/avatar/: avatar.html
mockups/banner/: banner.html
mockups/breadcrumb/: breadcrumb.html
mockups/calendar/: calendar.html
mockups/chat_thread/: chat_thread.html
mockups/code_block/: code_block.html
mockups/color_picker/: color_picker.html
mockups/colorbar/: colorbar.html
mockups/combobox/: combobox.html
mockups/command_palette/: command_palette.html
mockups/comparison_slider/: comparison_slider.html
mockups/context_menu/: context_menu.html
mockups/data_table/: data_table.html
mockups/kbd/: kbd.html
scripts/: update_lucide_glyphs.py
src/: accordion.rs  avatar.rs  badge.rs  browser_tabs.rs  button.rs  callout.rs  card.rs  checkbox.rs  collapsing.rs  color_picker.rs  context_menu.rs  drawer.rs  file_drop_zone.rs  flash.rs  gauge.rs  indicator.rs  input.rs  knob.rs  lib.rs  log_bar.rs  menu.rs  menu_bar.rs  metric_slider.rs  modal.rs  multi_terminal.rs  pairing.rs  percent_slider.rs  pill.rs  popover.rs  progress_bar.rs  progress_ring.rs  range_slider.rs  removable_chip.rs  segmented.rs  segmented_control.rs  select.rs  slider.rs  sortable_list.rs  spinner.rs  stat_card.rs  (+9 more)
tests/: a11y.rs  glyph_sync.rs  visual.rs
(+46 files in other folders)
