[package]
name = "egui-elegance"
version = "0.6.1"
edition = "2021"
rust-version = "1.92"
authors = ["Stephen Berry"]
description = "Elegant, opinionated widgets for egui: buttons, inputs, selects, cards, tabs and more. Paired dark/light themes."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stephenberry/egui-elegance"
readme = "README.md"
keywords = ["egui", "gui", "ui", "theme", "widgets"]
categories = ["gui"]
exclude = [
    ".cargo/",
    ".github/",
    ".gitignore",
    "CONTRIBUTING.md",
    "dev/",
    "docs/images/",
    "mockups/",
    "tests/snapshots/",
    "tests/visual.rs",
]

[lib]
name = "elegance"
path = "src/lib.rs"

[dependencies]
egui = "0.34"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[[example]]
name = "orbit"
path = "examples/orbit.rs"

[[example]]
name = "widgets"
path = "examples/widgets.rs"

[[example]]
name = "render_docs"
path = "examples/render_docs.rs"
